--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   dio: ^5.3.2
   open_file: ^3.3.2
   flutter_tts: ^4.0.2
+  just_audio: ^0.9.36
   syncfusion_flutter_pdfviewer: ^28.1.36
   # Video player dependencies
   youtube_player_flutter: ^9.1.3
@@ -95,9 +96,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - pathfit_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
